Change color scheme, fix alignment and file paths

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,15 +4,17 @@ body {
 }
 
 body {
-  font-size: 13px;
-  font-family: 'Lato', sans-serif;
-  background-color: #e8e8e8;
-
+    font-size: 13px;
+    font-family: 'Lato', sans-serif;
+    background-color: #f7fafb;
+    color: #1d252b;
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 30px;
   font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    font-weight: bold !important;
 }
 
 h2 {
@@ -30,32 +32,53 @@ h5 {
   font-family: 'Lato', sans-serif;
 }
 
-.upperCase {
-    text-transform: uppercase;
-}
-
-.text-center {
-    text-align: center !important;
-}
-
 li{
     font-size: 1.4em;
 }
-.btn-outline-danger{
+
+.align-left {
+    float: left;
+}
+.align-right {
+    float: right;
+}
+
+.clear-float {
+    clear: both;
+}
+
+.btn-navbar{
     margin-left: 5px;
+    background-color: rgba(130,61,237,1);
+    color: white !important;
+}
+
+.btn-navbar:hover {
+    background-color: #542799 !important;
 }
 
 .navbar {
     padding-right: 50px;
+    background-color: #ffffff;
+    border-bottom: 1px solid rgba(130,61,237,0.2);
+    z-index: 999;
 }
 
 .nav-item {
     margin-right: 10px;
 }
 
+.nav-item:hover a {
+    color: #823ded !important;
+}
+
+.nav-link {
+    font-size: 17px;
+    color: #1d252b !important;
+}
+
 .footer {
   text-align: center;
-  margin-top: 100px;
   bottom: 0;
   width: 100%;
   height: 100px; /* Set the fixed height of the footer here */
